Добавлен перевод символов кодировки cp1251 в числа для кода на c

--- a/LineReductant.csproj
+++ b/LineReductant.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0-preview.4.20251.6" />
     <PackageReference Include="TextCopy" Version="3.3.0" />
   </ItemGroup>
 
